Верстка главной страницы. Планшетная версия

--- a/less/content-map.less
+++ b/less/content-map.less
@@ -4,3 +4,9 @@
   background: url('../img/bg-map-mobile@1x.png') no-repeat;
   background-size: cover;
 }
+@media @tablet-widths {
+  .content-map {
+    height: 380px;
+  }
+
+}
