--- a/less/information.less
+++ b/less/information.less
@@ -42,3 +42,35 @@
     }
   }
 }
+
+@media @tablet-widths {
+  .information {
+    &__h2 {
+      font-size: 40px;
+      line-height: 60px;
+      margin: 0;
+      padding: 0 40px;
+    }
+    &__h2:last-child {
+      padding: 0 55px;
+    }
+    &__features {
+      padding-bottom: 0;
+      padding-left: 50%;
+      padding-top: 80px;
+      text-align: left;
+      overflow: hidden;
+    }
+    &__item {
+      padding: 0;
+      margin: 10px 40px 40px 0px;
+    }
+    &__image {
+      &--item3 {
+        right:25%;
+        bottom: -40px;
+        transform: scale(1.7);
+      }
+    }
+  }
+}
