--- a/less/logo.less
+++ b/less/logo.less
@@ -3,7 +3,14 @@
   text-decoration: none;
   width: 75px;
   height: 22px;
-  margin-left:20px;
+  margin-left: 20px;
   background: transparent url('../img/logo-pink-white-mobile.svg') no-repeat;
+}
 
+@media @tablet-widths {
+  .logo {
+    width: 150px;
+    height: 40px;
+    background: transparent url('../img/logo-pink-white.svg') no-repeat;
+  }
 }
