--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -15,3 +15,22 @@
     background: url('../img/icon-menu-cross.svg') no-repeat;
   }
 }
+@media @tablet-widths {
+  .main-nav {
+    height: 110px;
+    padding: 25px 40px;
+    background-color: rgba(40, 54, 69, 0.7);
+    box-sizing: border-box;
+    margin-bottom: -110px;
+    border-bottom: none;
+    &__switch {
+      top: 45px;
+      right: 40px;
+      width: 50px;
+      height: 25px;
+      &--burger {
+        background: url('../img/icon-menu-burger.svg') no-repeat;
+      }
+    }
+  }
+}
