--- a/less/style.less
+++ b/less/style.less
@@ -19,6 +19,7 @@
 @import "upload-image.less";
 @import "main-nav.less";
 @import "slider.less";
+@import "diagram.less";
 body {
   font-size: 14px;
   line-height: 30px;
@@ -39,4 +40,5 @@ body {
 h1, h2, h3, p {
   margin: 0;
   padding: 0;
+  font-weight: normal;
 }
