--- a/less/slider.less
+++ b/less/slider.less
@@ -40,3 +40,19 @@
 #btn-3:checked ~ .slider__inner .slider__slides {
     transform: translate(-560px);
 }
+@media @tablet-widths {
+    .slider {
+      &__inner {
+        width: 620px;
+      }
+    }
+    #btn-1:checked ~ .slider__inner .slider__slides {
+        transform: translate(0);
+    }
+    #btn-2:checked ~ .slider__inner .slider__slides {
+        transform: translate(-620px);
+    }
+    #btn-3:checked ~ .slider__inner .slider__slides {
+        transform: translate(-1240px);
+    }
+}
