--- a/less/intro.less
+++ b/less/intro.less
@@ -14,7 +14,8 @@
     text-align: center;
     font-size: 18px;
     line-height: 18px;
-    margin: 27px 20px;
+    margin: 0 20px;
+    margin-bottom: 27px;
     padding: 15px 0;
     border: 3px solid #ffffff;
     border-radius: 55px;
@@ -22,6 +23,8 @@
   }
   &__download-block {
       background: #1d2631;
+      padding-top: 27px;
+      width: 294px;
   }
   &__intro-wrapper {
     margin: 0 57px;
