--- a/less/logo.less
+++ b/less/logo.less
@@ -12,5 +12,15 @@
     width: 150px;
     height: 40px;
     background: transparent url('../img/logo-pink-white.svg') no-repeat;
+    &--footer {
+        background: transparent url('../img/logo-pink-blue-mobile.svg') no-repeat;
+        margin: 0;
+    }
+  }
+}
+@media @desktop-widths {
+  .logo {
+    outline: 1px solid red;
+    display: inline-block;
   }
 }
