--- a/less/main-menu.less
+++ b/less/main-menu.less
@@ -26,3 +26,15 @@
     display: none;
   }
 }
+
+@media @desktop-widths {
+  .main-menu {
+    display: inline-block;
+    margin-left: 170px;
+    outline: 1px solid red;
+    &__items {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+}
