--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -34,3 +34,12 @@
     }
   }
 }
+
+@media @desktop-widths {
+  .main-nav {
+    padding: 25px 130px;
+    &__switch {
+      display: none;
+    }
+  }
+}
