--- a/less/style.less
+++ b/less/style.less
@@ -20,6 +20,7 @@
 @import "main-nav.less";
 @import "slider.less";
 @import "diagram.less";
+@import "main-footer.less";
 body {
   font-size: 14px;
   line-height: 30px;
