Верстка таблички-слайдера в мобильной версии главной страницы

--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -38,6 +38,8 @@
 @media @desktop-widths {
   .main-nav {
     padding: 25px 130px;
+    display: flex;
+    justify-content: space-between;
     &__switch {
       display: none;
     }
