--- a/less/intro.less
+++ b/less/intro.less
@@ -4,17 +4,19 @@
     background: url('../img/iphone-hand-mobile@1x.png') no-repeat left bottom,
                 url('../img/bg-back-mobile@1x.jpg') no-repeat 50% 100%;
     background-size: auto, cover;
+    margin-top: 220px;
   }
   &__download {
     display: block;
     height: 55px;
+    width: 280px;
     color: #ffffff;
     text-decoration: none;
     font-family: "Open Sans Bold", Arial, sans-serif;
     text-align: center;
     font-size: 18px;
     line-height: 18px;
-    margin: 0 20px;
+    margin: 0 auto;
     margin-bottom: 27px;
     padding: 15px 0;
     border: 3px solid #ffffff;
@@ -24,10 +26,10 @@
   &__download-block {
       background: #1d2631;
       padding-top: 27px;
-      width: 294px;
   }
   &__intro-wrapper {
-    margin: 0 57px;
+    margin: 0 auto;
+    width: 280px;
     height: 60px;
     display: flex;
     justify-content: space-between;
@@ -48,11 +50,12 @@
   &__message {
     font-family: "Open Sans Light", Arial, sans-serif;
     font-size: 14px;
+    width: 280px;
     line-height: 24px;
     text-align: center;
     color: #ffffff;
-    padding: 30px 45px;
-    margin: 0;
+    padding: 30px 0;
+    margin: 0 auto;
   }
   &__header {
       display: none;
@@ -62,6 +65,7 @@
   .intro {
 
     &__image {
+      margin-top: 0;
       height: 730px;
       background: url('../img/iphone-hand-mobile@1x.png') no-repeat 85% bottom,
                   url('../img/bg-back-mobile@1x.jpg') no-repeat 50% 100%;
@@ -84,8 +88,12 @@
       margin-right: 75px;
       text-align: center;
     }
-    &__download {
-      padding-left: 40px;
+  }
+}
+@media @desktop-widths {
+  .intro {
+    &__image {
+      margin-top: 0;
     }
   }
 }
