--- a/less/main-menu.less
+++ b/less/main-menu.less
@@ -1,9 +1,9 @@
 .main-menu {
+  margin-top: 26px;
   &__items {
     list-style: none;
     margin: 0;
     padding: 0;
-    flex-grow: 1;
   }
   &__items a {
     display: block;
@@ -15,7 +15,6 @@
     line-height: 32px;
     text-transform: uppercase;
     text-align: center;
-    width:100%;
     padding:15px 0;
     border-top: 1px solid #485461;
     border-bottom: 1px solid black;
@@ -29,12 +28,21 @@
 
 @media @desktop-widths {
   .main-menu {
-    display: inline-block;
-    margin-left: 170px;
-    outline: 1px solid red;
+    margin: 0;
+    display: block;
+    width: 55%;
     &__items {
       display: flex;
       justify-content: space-between;
+    }
+    &__items a {
+      font-family: "Open Sans", Arial, sans-serif;
+      font-weight: normal;
+      background-color: transparent;
+      border-top: none;
+      border-bottom: none;
+      text-transform: none;
+
     }
   }
 }
