--- a/less/price.less
+++ b/less/price.less
@@ -1,5 +1,55 @@
 .price {
   background-color: #f2f2f2;
+
+  &__list {
+    border-collapse: collapse;
+  }
+  &__list th:first-child, &__list td:first-child {
+    display: none;
+  }
+  &__list th {
+    height: 100px;
+    background-color: #283645;
+    color: #ffffff;
+    font-family: "Open Sans Light", Arial, sans-serif;
+    font-size: 24px;
+    line-height: 30px;
+  }
+  &__list td {
+    border: 2px solid #e5e5e5;
+    position: relative;
+    width: 276px;
+    height: 60px;
+    font-family: "Open Sans", Arial, sans-serif;
+    font-size: 14px;
+    line-height: 30px;
+    text-transform: uppercase;
+    color: #283645;
+    padding-left: 22px;
+    }
+    &__icon {
+      width: 31px;
+      height: 31px;
+      background-color: pink;
+      position: absolute;
+      right: 20px;
+      top: 15px;
+      &--yes {
+        background: url('../img/icon-yes.svg') no-repeat 50% 50%;
+      }
+      &--no {
+          background: url('../img/icon-no.svg') no-repeat 50% 50%;
+      }
+    }
+    &__th {
+      font-family: "Open Sans Bold", Arial, sans-serif;
+      text-transform: uppercase;
+      font-size: 18px;
+      line-height: 30px;
+    }
+    &__hit {
+
+    }
 }
 .price input[type=radio] {
   display: none;
