--- a/less/slider.less
+++ b/less/slider.less
@@ -30,7 +30,10 @@
 }
 #btn-1:checked ~ .slider__controls label[for="btn-1"],
 #btn-2:checked ~ .slider__controls label[for="btn-2"],
-#btn-3:checked ~ .slider__controls label[for="btn-3"] {
+#btn-3:checked ~ .slider__controls label[for="btn-3"],
+#btn-4:checked ~ .slider__controls label[for="btn-4"],
+#btn-5:checked ~ .slider__controls label[for="btn-5"],
+#btn-6:checked ~ .slider__controls label[for="btn-6"]  {
     background-color: transparent;
     box-shadow:0 0 0 3px #79828b;
 }
@@ -57,6 +60,11 @@
       &__inner {
         width: 620px;
       }
+      &__controls {
+        &--table label {
+          display: none;
+        }
+      }
     }
     #btn-1:checked ~ .slider__inner .slider__slides {
         transform: translate(0);
@@ -66,5 +74,8 @@
     }
     #btn-3:checked ~ .slider__inner .slider__slides {
         transform: translate(-1240px);
+    }
+    #btn-5:checked ~ .slider__inner .slider__slides {
+        transform: translate(0px);
     }
 }
