верстка страницы формы

--- a/less/diagram.less
+++ b/less/diagram.less
@@ -32,3 +32,14 @@
     }
   }
 }
+@media @desktop-widths {
+  .diagram {
+    &__h2 {
+      line-height: 30px;
+    }
+    &__link, &__item {
+      font-size: 18px;
+      line-height: 30px;
+    }
+  }
+}
