--- a/less/intro.less
+++ b/less/intro.less
@@ -45,7 +45,7 @@
     background: url('../img/logo-android.svg') no-repeat 50% 50%;
   }
   &__intro-logo--windows {
-    background: url('/img/logo-microsoft.svg') no-repeat 50% 50%;
+    background: url('../img/logo-microsoft.svg') no-repeat 50% 50%;
   }
   &__message {
     font-family: "Open Sans Light", Arial, sans-serif;
