--- a/less/logo.less
+++ b/less/logo.less
@@ -5,6 +5,13 @@
   height: 22px;
   margin-left: 20px;
   background: transparent url('../img/logo-pink-white-mobile.svg') no-repeat;
+  &--footer {
+    display: block;
+    width: 150px;
+    height: 40px;
+    background: transparent url('../img/logo-pink-blue-mobile.svg') no-repeat;
+    margin-bottom: 55px;
+  }
 }
 
 @media @tablet-widths {
