--- a/less/style.less
+++ b/less/style.less
@@ -21,6 +21,7 @@
 @import "slider.less";
 @import "diagram.less";
 @import "main-footer.less";
+@import "forms.less";
 body {
   font-size: 14px;
   line-height: 30px;
