--- a/less/main-footer.less
+++ b/less/main-footer.less
@@ -1,5 +1,11 @@
 .main-footer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  &--closed {
   display: none;
+  }
 }
 @media @tablet-widths {
   .main-footer {
