--- a/less/social.less
+++ b/less/social.less
@@ -1,4 +1,3 @@
-@media @tablet-widths {
   .social {
     &__btn {
       display: block;
@@ -19,6 +18,7 @@
         background: url('../img/icon-youtube.svg') no-repeat 50% 50%;
       }
     }
+    margin-bottom: 57px;
   }
   .footer-copyright {
     &__p {
@@ -37,4 +37,3 @@
       font-size: 0;
     }
   }
-}
