--- a/less/main-footer.less
+++ b/less/main-footer.less
@@ -3,16 +3,27 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  &--closed {
+  &--main-page {
   display: none;
   }
+
 }
 @media @tablet-widths {
   .main-footer {
-    display: flex;
+    height: 127px;
+    box-sizing: border-box;
     padding: 0 40px;
     height: 130px;
-    align-items: center;
+    flex-direction:row;
     justify-content: space-between;
+    align-items: center;
+    &--main-page {
+      display: flex;
+    }
+  }
+}
+@media @desktop-widths {
+  .main-footer {
+    padding: 0 130px;
   }
 }
