--- a/less/logo.less
+++ b/less/logo.less
@@ -18,7 +18,9 @@
   .logo {
     width: 150px;
     height: 40px;
-    background: transparent url('../img/logo-pink-white.svg') no-repeat;
+    padding-top: 2px;
+    background: transparent url('../img/logo-pink-white.svg') no-repeat 0 0;
+    margin: 0;
     &--footer {
         background: transparent url('../img/logo-pink-blue-mobile.svg') no-repeat;
         margin: 0;
