--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -32,7 +32,7 @@
   .main-nav {
     height: 110px;
     padding: 25px 40px;
-    background-color: rgba(40, 54, 69, 0.7);
+    background-color: rgba(40, 54, 69, 0.8);
     box-sizing: border-box;
     margin-bottom: -110px;
     border-bottom: none;
@@ -41,6 +41,7 @@
       right: 40px;
       width: 50px;
       height: 25px;
+      background: url('../img/icon-menu-burger.svg') no-repeat;
     }
   }
 }
