--- a/less/photo.less
+++ b/less/photo.less
@@ -40,7 +40,7 @@
     }
     &--upload {
       height: 374px;
-      margin-bottom: 40px;
+	  padding-top: 20px;
     }
   }
   &__user-name, &__text-commit {
@@ -94,17 +94,24 @@
       }
     }
     &__image {
-      width: 100%;
       height: 300px;
       &--grow {
         height: 509px;
       }
+	  &--upload {
+		  width: 300px;
+		  height: 400px;
+		  padding-top:0;
+	  }
     }
     &__commit {
       margin-top: 26px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+	  &--first {
+		padding: 0 40px;
+	  }
     }
     &__wrap {
       margin: 0 40px;
