--- a/less/review.less
+++ b/less/review.less
@@ -1,20 +1,24 @@
 .review {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  min-width: 320px;
   &__h3 {
     font-family: "Open Sans Bold", Arial, sans-serif;
     font-size: 18px;
     line-height: 30px;
     text-align: center;
     margin: 0 20px;
+    padding-bottom: 13px;
   }
   &__about {
     display: none;
   }
   &__item {
-    font-family: "Open Sans Regular", Arial, sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 14px;
     line-height: 30px;
     text-align: center;
-    margin: 0 20px;
+    margin: 0;
   }
   &__slide1, &__slide2, &__slide3 {
     width:280px;
@@ -32,7 +36,7 @@
 
     &__about {
       display: block;
-      font-family: "Open Sans Regular", Arial, sans-serif;
+      font-family: "Open Sans", Arial, sans-serif;
       font-size: 14px;
       line-height: 30px;
       text-align: center;
