--- a/less/feedback.less
+++ b/less/feedback.less
@@ -1,25 +1,33 @@
 .feedback {
+  min-width: 320px;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 44px;
+  padding-bottom: 40px;
   &__h2 {
     font-family: "Open Sans Light", Arial, sans-serif;
     font-size: 24px;
+    padding-bottom: 15px;
+    line-height: 28px;
     color: #283645;
   }
   &__h3 {
     font-family: "Open Sans Bold", Arial, sans-serif;
     font-size: 18px;
-    margin-top: 25px;
+    line-height: 32px;
+    margin-top: 15px;
   }
   &__item {
     font-family: "Open Sans Light", Arial, sans-serif;
     font-size: 24px;
+    line-height: 28px;
     color: #d22856;
+    padding: 0 20px 0px 20px;
   }
 }
 .feedback a {
   text-decoration: none;
 }
+
 @media @tablet-widths {
   .feedback {
     &__h2 {
