--- a/less/price.less
+++ b/less/price.less
@@ -1,20 +1,28 @@
 .price {
   background-color: #f2f2f2;
-
+  min-width: 320px;
+  padding-bottom: 35px;
   &__list {
     border-collapse: collapse;
+    margin: 0px 25px 0 25px;
   }
   &__list th:first-child, &__list td:first-child {
     display: none;
   }
   &__list th {
+    width: 276px;
+    position: relative;
+    border-right: 2px solid #e5e5e5;
+    border-left: 2px solid #e5e5e5;
     height: 100px;
+    box-sizing: border-box;
     background-color: #283645;
     color: #ffffff;
     font-family: "Open Sans Light", Arial, sans-serif;
+    font-weight: normal;
     font-size: 24px;
-    line-height: 30px;
-    padding: 0;
+    line-height: 34px;
+    padding: 0 0 5px 0;
   }
   &__list td {
     border: 2px solid #e5e5e5;
@@ -26,21 +34,23 @@
     line-height: 30px;
     text-transform: uppercase;
     color: #283645;
-    padding: 0 0 0 22px;
+    padding: 0 0 0 20px;
     box-sizing: border-box;
+    background-color: #ffffff;
     }
     &__icon {
-      width: 31px;
-      height: 31px;
+      width: 30px;
+      height: 30px;
       background-color: pink;
       position: absolute;
-      right: 20px;
+      right: 15px;
       top: 15px;
       &--yes {
-        background: url('../img/icon-yes.svg') no-repeat 50% 50%;
+        background: url('../img/icon-yes.svg') no-repeat 0 0;
+        background-size: 100%;
       }
       &--no {
-          background: url('../img/icon-no.svg') no-repeat 50% 50%;
+          background: url('../img/icon-no.svg') no-repeat 50% 0;
       }
     }
     &__th {
@@ -49,14 +59,38 @@
       font-size: 18px;
       line-height: 30px;
     }
-    &__hit {
-
+    &__hit::before {
+      content: ' ';
+      display: block;
+      position: absolute;
+      background: url('../img/bg-hit.svg') no-repeat;
+      width: 73px;
+      height: 73px;
+      top: 0;
+      left: -2px;
+    }
+    &__hit::after {
+      content: 'хит';
+      display: block;
+      font-family: "Open Sans", Arial, sans-serif;
+      font-size: 14px;
+      position: absolute;
+      transform: rotate(-45deg);
+      top: 11px;
+      left: 9px;
     }
 }
 .price input[type=radio] {
   display: none;
 }
-
+.price::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 90px;
+  background: url('../img/bg-triangle-white.svg') no-repeat 0 0;
+  background-size: 100% auto;
+}
 @media @tablet-widths {
   .price {
     &__list {
