--- a/less/slider.less
+++ b/less/slider.less
@@ -4,7 +4,7 @@
     width: 280px;
     margin: 0 auto;
     &--table {
-      width: 280px;
+      width: 320px;
     }
   }
   &__slides {
@@ -13,7 +13,11 @@
   }
   &__controls {
     font-size: 0;
+    margin-top: 27px;
     text-align: center;
+    &--table {
+      margin-top: 35px;
+    }
   }
   &__controls label {
     width: 6px;
