Верстка главной страницы

--- a/less/feedback.less
+++ b/less/feedback.less
@@ -30,20 +30,27 @@
 
 @media @tablet-widths {
   .feedback {
+    padding-bottom: 28px;
     &__h2 {
       font-size: 40px;
-      line-height: 58px;
+      line-height: 48px;
+    }
+    &__item {
+      padding: 0;
     }
     &__wrap-items {
+      margin-top: 10px;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
     }
     &__item1, &__item2, &__item3 {
-      margin: 0 45px;
+      margin: 0 41px 0 57px;
     }
     &__item3 {
       width:220px;
+      margin-top: 24px;
+      margin-left: 40px;
     }
   }
 }
