--- a/less/intro.less
+++ b/less/intro.less
@@ -69,10 +69,10 @@
 
     &__image {
       margin-top: 0;
-      height: 730px;
-      background: url('../img/iphone-hand-mobile@1x.png') no-repeat 85% bottom,
+      height: 855px;
+      background: url('../img/iphone-hand-mobile@1x.png') no-repeat 75% bottom,
                   url('../img/bg-back-mobile@1x.jpg') no-repeat 50% 100%;
-      background-size: 450px 520px, cover;
+      background-size: 552px 645px, cover;
     }
     &__download-block {
       background-color: transparent;
@@ -110,6 +110,22 @@
   .intro {
     &__image {
       margin-top: 0;
+    }
+    &__header {
+      font-size: 50px;
+      line-height: 61px;
+      margin-left: 92px;
+      margin-top: 18px;
+      margin-right: 150px;
+      padding-bottom: 18px;
+    }
+    &__download {
+      margin-left: 129px;
+      font-size: 21px;
+    }
+    &__intro-wrapper {
+      margin-left: 169px;
+      margin-top: 62px;
     }
   }
 }
