--- a/less/main-menu.less
+++ b/less/main-menu.less
@@ -33,10 +33,12 @@
   .main-menu {
     margin: 0;
     display: block;
-    width: 55%;
     &__items {
       display: flex;
       justify-content: space-between;
+    }
+    &__items li {
+      margin-left: 80px;
     }
     &__items a {
       font-family: "Open Sans", Arial, sans-serif;
