--- a/less/review.less
+++ b/less/review.less
@@ -26,6 +26,7 @@
 }
 @media @tablet-widths {
   .review {
+    margin-bottom: 10px;
     &__slide1, &__slide2, &__slide3 {
       width:620px;
       position: relative;
@@ -43,6 +44,14 @@
       order: -1;
     }
     &__item {
+      font-size: 18px;
+      line-height: 30px;
+    }
+    &__h3 {
+      font-size: 20px;
+      line-height: 30px;
+      margin-top: 35px;
+      padding-bottom: 3px;
     }
   }
 }
