--- a/less/diagram.less
+++ b/less/diagram.less
@@ -5,30 +5,58 @@
   .diagram {
     display: block;
     margin-left: 50%;
-    margin-top: 100px;
-    margin-bottom: 130px;
+    margin-top: 97px;
+    margin-bottom: 121px;
+    position: relative;
     &__h2 {
       font-family: "Open Sans Bold", Arial, sans-serif;
       font-size: 30px;
       line-height: 36px;
-      margin-bottom: 17px;
-    }
+      margin-bottom: 9px;
+      margin-left: -2px;
+      text-align: left;
+      }
     &__item {
-      font-family: "Open Sans Regular", Arial, sans-serif;
+      font-family: "Open Sans", Arial, sans-serif;
       font-size: 14px;
       line-height: 24px;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
+      margin-left: -2px;
+      margin-right: 50px;
     }
     &__link {
-      font-family: "Open Sans Regular", Arial, sans-serif;
+      font-family: "Open Sans", Arial, sans-serif;
       font-size: 14px;
       line-height: 24px;
+      margin-left: -2px;
       color: #d22856;
     }
     &::before {
       content: '';
       display: block;
-      background: url('../img/')
+      width: 240px;
+      height: 274px;
+      position: absolute;
+      background: url('../img/timer.png') no-repeat 0 0;
+      background-size: contain;
+      left: -310px;
+      top:-40px;
+    }
+    &::after {
+      content: '24';
+      display: block;
+      text-align: center;
+      font-family: "Open Sans Bold", Arial, sans-serif;
+      font-size: 96px;
+      line-height: 174px;
+      color: #d22856;
+      width: 174px;
+      height: 174px;
+      border: 14px solid #d22856;
+      border-radius: 50%;
+      position: absolute;
+      left: -293px;
+      top:15px;
     }
   }
 }
