--- a/less/price.less
+++ b/less/price.less
@@ -94,29 +94,57 @@
 @media @tablet-widths {
   .price {
     &__list {
+      margin: 0;
     }
     &__list th:first-child, &__list td:first-child {
       display: table-cell;
+      padding-left: 15px;
+    }
+    &__list th:first-child {
+      border-left: none;
     }
     &__filters {
       display: none;
     }
     &__list td {
-      width: 153px;
+      width: 155px;
+      height: 47px;
       text-transform: none;
       vertical-align: middle;
-      font-size: 18px;
-      line-height: 24px;
+      font-size: 14px;
+      line-height: 30px;
     }
     &__list th {
-      width: 153px;
-
+      width: 155px;
+      height: 77px;
+      font-size: 18px;
+      line-height: 30px;
+      padding: 0;
     }
     &__list th:first-child {
       background: none;
     }
     &__icon {
       left: 60px;
+      &--yes {
+        top: 12px;
+      }
+      &--no {
+        top: 9px;
+      }
+    }
+    &__th {
+      font-size: 16px;
+      line-height: 26px;
+    }
+    &__hit::before {
+      width: 60px;
+      height: 60px;
+      background-size: contain;
+    }
+    &__hit::after {
+      top: 7px;
+      left: 5px;
     }
   }
 }
