--- a/less/intro.less
+++ b/less/intro.less
@@ -80,7 +80,6 @@
       top: 200px;
       width: 50%;
       padding-top: 10px;
-      margin-left: 10px;
     }
     &__header {
       display: inline;
@@ -126,6 +125,11 @@
     &__intro-wrapper {
       margin-left: 169px;
       margin-top: 62px;
+    }
+    &__message {
+      padding-top: 57px;
+      margin-left: 105px;
+      margin-right: 160px;
     }
   }
 }
