--- a/less/logo.less
+++ b/less/logo.less
@@ -10,7 +10,8 @@
     width: 150px;
     height: 40px;
     background: transparent url('../img/logo-pink-blue-mobile.svg') no-repeat;
-    margin-bottom: 55px;
+    margin-bottom: 37px;
+    margin-left: 9px;
   }
 }
 
@@ -28,5 +29,8 @@
   }
 }
 @media @desktop-widths {
+  .logo {
 
+    margin-top: 4px;
+  }
 }
