--- a/less/slider.less
+++ b/less/slider.less
@@ -88,11 +88,12 @@
 }
 @media @desktop-widths {
     .slider {
+      margin-top: 50px;
       &__inner {
         width: 820px;
         margin: 0 auto;
         &--table {
-          width: 920px;
+          width: 940px;
         }
       }
     }
