--- a/less/diagram.less
+++ b/less/diagram.less
@@ -62,6 +62,31 @@
 }
 @media @desktop-widths {
   .diagram {
+    background-color: #f2f2f2;
+    margin: 0;
+    padding-top: 160px;
+    padding-bottom: 112px;
+    padding-left: 500px;
+    &::before {
+      left: 130px;
+      top: 65px;
+      width: 300px;
+      height: 345px;
+    }
+    &::after {
+      top: 132px;
+      left: 152px;
+      width: 220px;
+      height: 220px;
+      border: 18px solid #d22856;
+      font-size: 120px;
+      line-height: 210px;
+    }
+    &__item {
+      margin-top: 25px;
+      margin-right: 210px;
+      margin-bottom: 30px;
+    }
     &__h2 {
       line-height: 30px;
     }
