--- a/less/feedback.less
+++ b/less/feedback.less
@@ -54,3 +54,33 @@
     }
   }
 }
+@media @desktop-widths {
+  .feedback {
+    padding-top: 66px;
+    &__h2 {
+      font-size: 50px;
+      line-height: 60px;
+    }
+    &__h3 {
+      margin-bottom: 20px;
+    }
+    &__wrap-items {
+    }
+    &__item1, &__item2, &__item3 {
+
+    }
+    &__item1 {
+      order: 0;
+      margin: 12px 0 0 15px;
+    }
+    &__item2 {
+      order: 2;
+      margin: 12px 0 0 0;
+    }
+    &__item3 {
+      order: 1;
+      margin: 12px 90px 0 108px;
+    }
+  }
+
+}
