--- a/less/forms.less
+++ b/less/forms.less
@@ -1,7 +1,9 @@
 .forms {
+
   &__competition {
+    min-width: 320px;
     display: block;
-    height: 237px;
+    height: 235px;
     width: 100%;
     background: url('../img/bg-back-mobile@1x.jpg') no-repeat 50% 100%;
     background-size: cover;
@@ -9,18 +11,18 @@
   &__h1 {
     font-family: "Open Sans Light", Arial, sans-serif;
     color: #ffffff;
-    line-height: 26px;
     font-size: 24px;
-    padding: 0 20px;
+    line-height: 30px;
+    padding: 0 15px;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 92px;
   }
   &__h2 {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: 14px;
     line-height: 30px;
     padding-top: 45px;
-    padding-bottom: 35px;
+    padding-bottom: 33px;
     text-align: center;
     margin: 0 20px;
   }
@@ -33,8 +35,11 @@
     line-height: 30px;
     text-transform: uppercase;
     color: #d22856;
+    margin-left: 22px;
     &--center {
       text-align: center;
+      margin: 0 20px;
+      line-height: 18px;
     }
     &--contacts {
       display: none;
@@ -44,7 +49,7 @@
     }
   }
   &__textfield {
-    margin: 0 20px;
+    margin: 0;
   }
 
   &__input-item {
@@ -53,32 +58,59 @@
   }
   &__input-text {
     width: 100%;
-    height: 59px;
+    height: 57px;
     border: 2px solid #e5e5e5;
     border-radius: 3px;
-    margin-bottom: 20px;
-    margin-top: 10px;
+    margin-bottom: 15px;
+    margin-top: 5px;
     }
   &__label {
     position: absolute;
     left:23px;
-    top:25px;
+    top:22px;
     font-family: "Open Sans", Arial, sans-serif;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 30px;
+  }
+  &__checkbox-items {
+    margin-top: 18px;
   }
   &__checkbox, &__radio {
     display: none;
   }
-  &__wrap {
+  &__name-wrap {
     padding: 0 20px;
+  }
+  &__radio-items {
+    margin-top: 14px;
+  }
+  &__wrap {
+    margin-top: 30px;
+    padding: 0 20px;
+    padding-bottom: 26px;
     &--grey {
       background-color: #f2f2f2;
+    }
+    &--radio {
+      margin-top: 15px;
+      padding-top: 36px;
+      margin-bottom: 56px;
+    }
+    &--checkbox {
+      padding-top: 35px;
+    }
+    &--commit {
+      padding-left: 0;
+      padding-right: 0;
+      margin: 0 20px;
     }
   }
   &__item {
     position: relative;
-    height: 80px;
+    height: 82px;
+    &--radio {
+      height: 75px;
+    }
   }
   &__item label {
     margin-left: 70px;
@@ -134,12 +166,15 @@
     background-color: #d22856;
   }
   &__commit {
-    margin: 0 20px;
     display: flex;
     flex-direction: column-reverse;
+    position: relative;
   }
   &__commit label {
-
+    position: absolute;
+    top: 34px;
+    left: 20px;
+    font-size: 18px;
   }
   &__textarea {
     resize: none;
@@ -148,7 +183,12 @@
     border-radius: 3px;
     margin: 0 auto;
     display: block;
-    margin-bottom: 47px;
+    margin-bottom: 22px;
+    width: 100%;
+    height: 200px;
+    box-sizing: border-box;
+    margin-top: 18px;
+
   }
   &__wrap-button {
     display: flex;
@@ -157,20 +197,20 @@
     align-items: center;
   }
   &__btn-send {
-    width: 274px;
+    width: 280px;
     display: block;
     margin: 0 auto;
     border:3px solid #2aab6d;
     background-color: #2aab6d;
     border-radius: 3px;
-    height: 57px;
+    height: 63px;
     font-family: "Open Sans Bold", Arial, sans-serif;
     font-size: 18px;
     font-weight: bold;
     text-transform: uppercase;
     line-height: 30px;
     color: #ffffff;
-    margin-bottom: 40px;
+    margin-bottom: 35px;
 }
   &__required-fields {
     font-family: "Open Sans", Arial, sans-serif;
@@ -178,6 +218,7 @@
     text-transform: uppercase;
     line-height: 30px;
     display: block;
+
   }
   &__required-fields span {
     color: #d22856;
@@ -185,6 +226,10 @@
 }
 @media @tablet-widths {
   .forms {
+    &__page-forms {
+      display: flex;
+      flex-direction: column;
+    }
     &__competition {
       height: 440px;
     }
@@ -193,20 +238,24 @@
       margin: 0 100px;
       font-size: 50px;
       line-height: 60px;
-      padding: 190px 0 0 0;
+      padding: 180px 0 0 0;
     }
     &__h2 {
       font-size: 18px;
       line-height: 30px;
-      padding-top: 95px;
-      padding-bottom: 70px;
+      padding-top: 92px;
+      padding-bottom: 43px;
       margin: 0 100px;
     }
     &__h2 span {
       display: inline;
     }
-    &__textfield {
+    &__name-wrap {
+
       margin: 0 40px;
+      padding: 0;
+    }
+    &__textfield {
       display: flex;
       align-items: center;
       &--bottom {
@@ -215,8 +264,7 @@
         justify-content: flex-start;
       }
     }
-    &__textfield-header {
-      margin-right: 22px;
+    &__textfield:last-child {
     }
     &__label {
       font-size: 18px;
@@ -225,7 +273,7 @@
       top: 40px;
     }
     &__input-text {
-      margin: 25px auto;
+      margin: 27px auto;
     }
     &__wrap {
       display: flex;
@@ -234,17 +282,33 @@
       border: 2px solid #e5e5e5;
       background-color: #ffffff;
       padding-bottom: 20px;
+      &--checkbox {
+        order: 2;
+      }
+      &--radio {
+        margin-top: 38px;
+
+      }
+      &--contacts {
+        order: 1;
+      }
     }
+
     &__textfield-header {
+      margin-right: 10px;
+      margin-left: 0px;
       &--center {
+        margin-right: 0;
         align-self: center;
-        margin-top: -15px;
+        margin-top: -45px;
         padding: 0 30px;
         background-color: #ffffff;
         overflow: hidden;
       }
       &--contacts {
         display: block;
+        margin-bottom: 0;
+          margin-top: -15px;
       }
       &--hidden {
         display: none;
@@ -257,6 +321,7 @@
     }
     &__textarea {
       margin: 0 40px;
+
     }
 
     &__btn-send {
@@ -269,8 +334,8 @@
       justify-content: space-between;
       align-items: center;
     }
+    }
   }
-}
 @media @desktop-widths {
   .forms {
     &__h1 {
