--- a/less/main-footer.less
+++ b/less/main-footer.less
@@ -3,6 +3,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-top: 55px;
   &--main-page {
   display: none;
   }
@@ -25,5 +26,6 @@
 @media @desktop-widths {
   .main-footer {
     padding: 0 130px;
+    margin-top: 21px;
   }
 }
