--- a/less/social.less
+++ b/less/social.less
@@ -6,7 +6,7 @@
       width: 45px;
       height: 45px;
       border-radius: 50%;
-      box-shadow:0 0 0 3px grey;
+      box-shadow:0 0 0 3px #f2f2f2;
       &--twitter {
         background: url('../img/icon-twitter.svg') no-repeat 50% 50%;
       }
@@ -17,13 +17,13 @@
         background: url('../img/icon-youtube.svg') no-repeat 50% 50%;
       }
     }
-    margin-bottom: 57px;
+    margin-bottom: 36px;
   }
   .footer-copyright {
     &__p {
       display: inline-block;
       vertical-align: middle;
-      font-family: "Open Sans Regular", Arial, sans-serif;
+      font-family: "Open Sans", Arial, sans-serif;
       font-size: 14px;
       line-height: 18px;
       color: #000000;
@@ -42,4 +42,19 @@
   .social {
     margin-bottom: 0;
   }
+}
+@media @desktop-widths {
+  .social {
+    margin-right: 0;
+    margin-top: 16px;
+    &__btn {
+      margin: 8px;
+    }
+  }
+    .footer-copyright {
+      margin-top: 14px;
+      &__p {
+        font-size: 18px;
+      }
+    }
 }
